k8s/graphql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: graphql-service
  template:
    metadata:
      labels:
        component: graphql-service
    spec:
      containers:
        - name: graphql-service
          image: pmofrancisco/bingo-graphql-service
          ports:
            - containerPort: 3000
