k8s/auth-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: auth-service
  ports:
    - port: 3000
      targetPort: 3000
