k8s/cards-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cards-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: cards-service
  ports:
    - port: 3000
      targetPort: 3000
