k8s/graphql-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: graphql-service
  ports:
    - port: 3000
      targetPort: 3000
