k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/cards/?(.*)
            pathType: Prefix
            backend:
              service:
                name: cards-cluster-ip-service
                port:
                  number: 3000
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-cluster-ip-service
                port:
                  number: 3000
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: graphql-cluster-ip-service
                port:
                  number: 3000
